Student Module - Create migration -Create crud operations -Create api docs -Create routes
